syntax = "proto3";

package nl.toefel.any;

import "google/protobuf/any.proto";

service AnyService {
    rpc CallWithAny(Payload) returns (Payload) {}
}

message Payload {
    google.protobuf.Any obj = 1;
}
